objects/Equipment_Category__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Code__c</fullName>
        <externalId>true</externalId>
        <label>Category Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Equipment Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Category_Description__c</columns>
        <columns>NAME</columns>
        <columns>Category_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Equipment Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>